2011-12-21 Thu  Jari Aalto  <jari.aalto@cante.net>

	* README: untabify.
	(Important files::AUTHORS): adjust.

2011-12-17 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-generate-install): New.
	(epackage-devel-compose-package-dir): Rewrite. Modular.
	(epackage-autoload-create-on-directory): Return files.
	(epackage-nconc): New.
	(epackage--layout-template-info): Fix typo.

2011-12-16 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-generate-loaddefs): Support
	ignore file.
	(epackage-devel-generate-compile-main): Support ignore file.
	(epackage-devel-generate-examples): Add preliminary ignore
	file support.

2011-12-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-erase-buffer): New.
	(epackage-devel-generate-autoloads): Use
	`epackage-erase-buffer'.
	(epackage-autoload-create-on-directory): Add argument
	EXCLUDE.
	(epackage-layout-file-name): Correct function.
	(epackage-devel-generate-uninstall): Correct variable.
	(epackage-devel-generate-autoloads): Support ignore file.

2011-12-14 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-generate-examples):
	Adjust template string text for output file.
	(epackage--layout-mapping): add 'ignore' entry.
	(epackage-pkg-ignore-file-content): New.
	(epackage-read-file-content-regexp): New.
	(epackage-pkg-lisp-directory): Correct to use
	`insert-file-contents-literally'.
	(epackage-pkg-lisp-directory): Drop suppert for comments
	in hash-marks.

2011-12-14 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-info-mode-map): Add
	`epackage-info-mode-cmd-email-upstream-ping'.
	(epackage--layout-mapping): Add examples.
	(epackage-devel-generate-examples): New.
	(epackage-devel-compose-package-dir): Use
	`epackage-devel-generate-examples'.
	(epackage-devel-generate-uninstall): New.
	(epackage-devel-information-date-versionstr): Correct
	call to `epackage-devel-information-version-main'.